--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "dev": "node build/dev-server.js",
         "start": "npm run dev",
-        "build": "node build/build.js && surge ./dist --domain valparaiso.surge.sh",
+        "build": "node build/build.js && surge ./dist --domain https://valparaiso.surge.sh",
+        "build-local": "node build/build.js",
         "lint": "eslint --ext .js,.vue src"
     },
     "dependencies": {
@@ -28,6 +29,7 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.0.1",
         "babel-loader": "^7.1.2",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
         "babel-preset-stage-2": "^6.24.1",
@@ -56,9 +58,12 @@
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^2.30.1",
         "http-proxy-middleware": "^0.17.4",
+        "image-webpack-loader": "^3.4.2",
         "img-loader": "^2.0.0",
+        "jimp": "^0.2.28",
         "markup-inline-loader": "^0.2.0",
         "node-sass": "^4.5.3",
+        "offline-plugin": "^4.8.4",
         "opn": "^5.1.0",
         "optimize-css-assets-webpack-plugin": "^3.2.0",
         "ora": "^1.3.0",
@@ -67,6 +72,8 @@
         "sass-loader": "^6.0.6",
         "semver": "^5.4.1",
         "shelljs": "^0.7.8",
+        "sw-precache-webpack-plugin": "^0.11.4",
+        "uglify-es": "^3.1.6",
         "url-loader": "^0.6.2",
         "vue-loader": "^13.3.0",
         "vue-style-loader": "^3.0.3",
