--- a/package.json
+++ b/package.json
@@ -12,17 +12,10 @@
         "lint": "eslint --ext .js,.vue src"
     },
     "dependencies": {
-        "animejs": "^2.2.0",
-        "axios": "^0.16.2",
-        "firebase": "^4.5.1",
         "intersection-observer": "^0.4.2",
         "vue": "^2.5.2",
-        "vue-axios": "^2.0.2",
         "vue-lazyload": "^1.1.4",
-        "vue-router": "^3.0.1",
-        "vue-touch": "^2.0.0-beta.4",
-        "vuex": "^3.0.0",
-        "vuex-router-sync": "^5.0.0"
+        "vue-router": "^3.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.5",
